--- a/app/src/main/res/layout/activity_primos.xml
+++ b/app/src/main/res/layout/activity_primos.xml
@@ -19,4 +19,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:id="@+id/progressResult"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
