--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -10,6 +10,9 @@
         <item
             android:id="@+id/nav_primosinterface"
             android:title="Primos Interface" />
+        <item
+            android:id="@+id/nav_primosfragmento"
+            android:title="Primos Fragmento Ocilto" />
 
     </group>
 
