--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -13,6 +13,9 @@
         <item
             android:id="@+id/nav_primosfragmento"
             android:title="Primos Fragmento Ocilto" />
+        <item
+            android:id="@+id/nav_cronometro"
+            android:title="Servicio cronometro" />
 
     </group>
 
