--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -16,6 +16,9 @@
         <item
             android:id="@+id/nav_cronometro"
             android:title="Servicio cronometro" />
+        <item
+            android:id="@+id/nav_messengerservice"
+            android:title="Messenger Service" />
 
     </group>
 
