--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -19,6 +19,9 @@
         <item
             android:id="@+id/nav_messengerservice"
             android:title="Messenger Service" />
+        <item
+            android:id="@+id/nav_calculadorasha1"
+            android:title="CalculadoraSHA1" />
 
     </group>
 
