--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -22,6 +22,9 @@
         <item
             android:id="@+id/nav_calculadorasha1"
             android:title="CalculadoraSHA1" />
+        <item
+            android:id="@+id/nav_calculadorasha1broadcast"
+            android:title="CalculadoraSHA1Broadcast" />
 
     </group>
 
