--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -25,6 +25,9 @@
         <item
             android:id="@+id/nav_calculadorasha1broadcast"
             android:title="CalculadoraSHA1Broadcast" />
+        <item
+            android:id="@+id/nav_bouncingball"
+            android:title="BouncingBall" />
 
     </group>
 
